# diffkemp-automation

./: .gitignore  .gitmodules  README.md  configs
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  README.md  alembic.ini  create_cron_job.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 329508bae2f0_add_field_for_notes_for_results.py  8233dd7ca744_initial_db.py  f04430af51e2_add_expected_res_for_funs.py
backend/automation/: comparator.py  utils.py
backend/automation/configs/: README.md  bpf-next.yml  mbedtls.yml  nettle.yml  sodium.yml  wolfssl.yml
backend/automation/db/: __init__.py
backend/automation/models/projects/: __init__.py  commits.py  project.py  projects.py  versions.py
backend/automation/models/results/: __init__.py  commits.py  diffkemp_out.py  function.py  result.py  results.py  types.py  versions.py
backend/automation/web/: __init__.py  api.py  auth.py  commits.py  versions.py  viewer.py
backend/automation/web/dtos/results/: commits.py  versions.py
backend/automation/web/static/css/: main.css
backend/automation/web/templates/: layout.html  macros.html
backend/automation/web/templates/commits/: differences.html  info.html  layout.html  list.html  result.html
backend/automation/web/templates/versions/: differences.html  layout.html  list.html  result.html
backend/comparison_container/: Dockerfile  build.sh
backend/comparison_container/files/: README.md  build_diffkemp.sh  flake.nix  get_diffkemp_bin.sh  get_diffkemp_sha.sh
backend/comparison_container/files/commit_comparison/: build_view_files.sh  run_cmp.sh
backend/comparison_container/files/version_comparison/: build_view_files.sh  run_cmp.sh
backend/tests/: conftest.py  project_versions_test.py  result_commits_test.py  results_test.py
